# Hoard

./: .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  LICENSE  NEWS  README  README.md  bench_malloc.cpp  circle.yml  index.html  params.json  test_malloc.cpp  todo.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
benchmarks/: Makefile  Makefile.inc  README  phong.c
benchmarks/cache-scratch/: Makefile  cache-scratch.cpp
benchmarks/cache-thrash/: Makefile  cache-thrash.cpp
benchmarks/common/: cpuinfo.h  fred.h  timer.h
benchmarks/larson/: Makefile  larson  larson.cpp  libhoard.dll.foo
benchmarks/linux-scalability/: Makefile  README  linux-scalability.c  ptbarrier.h
benchmarks/phong/: Makefile  phong.c
benchmarks/shbench/: Makefile  shbench1.cpp
benchmarks/threadtest/: Makefile  threadtest.cpp
cmake/: FindDetours.cmake  HoardConfig.cmake.in
src/: .#Makefile  .#compile-winhoard.cmd  .#hoardheap.h  GNUmakefile  Makefile  README  README.md  test.sh
src/Heap-Layers/: heaplayers.h
src/Heap-Layers/examples/kingsley/: compile
src/Heap-Layers/heaps/combining/: hybridheap.h
src/Heap-Layers/heaps/debug/: #logheap.h#  all.h  debugheap.h  sanitycheckheap.h
src/Heap-Layers/heaps/special/: bumpalloc.h  zoneheap.h
src/Heap-Layers/heaps/threads/: lockedheap.h
src/Heap-Layers/heaps/top/: mmapheap.h
src/Heap-Layers/heaps/utility/: exceptionheap.h
src/Heap-Layers/legacy/: README.md
src/Heap-Layers/legacy/reap/: README  addheader.h  clearoptimizeheap.h  compile  libreap.cpp  reap.h  regionheap.cpp  regionheap.h  regionheapapi.h  regionsimulator.cpp  regionsimulator.h
src/Heap-Layers/locks/: maclock.h  oldspinlock.h  spinlock-old.h  spinlock.h
src/Heap-Layers/utility/: align.h  all.h  bins16k.h  bins4k.h  bins64k.h  bins8k.h  checkpoweroftwo.h  dllist.h  ilog2.h  sllist.h
src/Heap-Layers/wrappers/: ansiwrapper.h  gnuwrapper-hooks.cpp  gnuwrapper.cpp  macwrapper.cpp  testalignment.cpp  wrapper.cpp
src/heaplayers/: README  README.md  heaplayers.h
src/heaplayers/arch-specific/: mallocinfo.h
src/heaplayers/heaps/: all.h
src/heaplayers/heaps/buildingblock/: adaptheap.h  boundedfreelistheap.h  chunkheap.h  coalesceheap.h  freelistheap.h
src/heaplayers/heaps/combining/: hybridheap.h  segheap.h  strictsegheap.h  tryheap.h
src/heaplayers/heaps/debug/: checkheap.h  debugheap.h  logheap.h  sanitycheckheap.h  statsheap.h
src/heaplayers/heaps/general/: dlheap.h  kingsleyheap.h  leamallocheap.h
src/heaplayers/heaps/objectrep/: addheap.h  coalesceableheap.h  sizeheap.h  sizeownerheap.h
src/heaplayers/heaps/special/: nestedheap.h  obstack.h  obstackheap.h  obstackreap.h  sbrk.c  xallocheap.h  zoneheap.h
src/heaplayers/heaps/threads/: lockedheap.h  phothreadheap.h  sizethreadheap.h  threadheap.h  threadspecificheap.h
src/heaplayers/heaps/top/: all.h  mallocheap.h  mmapheap.h  sbrkheap.h  staticheap.h
src/heaplayers/heaps/utility/: all.h  exceptionheap.h  localmallocheap.h  profileheap.h  slopheap.h  traceheap.h  uniqueheap.h
src/heaplayers/locks/: maclock.h  recursivelock.h  spinlock.h  winlock.h
src/heaplayers/threads/: cpuinfo.h  fred.h
src/heaplayers/utility/: align.h  all.h  bins16k.h  bins4k.h  bins64k.h  bins8k.h  dllist.h  dynarray.h  freesllist.h  gcd.h  guard.h  hash.h  lcm.h  myhashmap.h  sassert.h  sllist.h  timer.h
src/heaplayers/wrappers/: ansiwrapper.h  ansiwrapper.h.mod  gnuwrapper.cpp  macwrapper.cpp  mmapwrapper.h  stlallocator.h  winwrapper.cpp  wrapper.cpp
src/include/: VERSION.h
src/include/hoard/: basehoardmanager.h  debugprint.h  emptyclass.h  emptyhoardmanager.h  geometricsizeclass.cpp  geometricsizeclass.h  globalheap.h  heapmanager.h  hoardconstants.h  hoardheap.h  hoardmanager.h  hoardsuperblock.h  hoardsuperblockheader.h  hoardtlab.h  processheap.h  redirectfree.h  statistics.h  thresholdheap.h  thresholdsegheap.h
src/include/superblocks/: addheaderheap.h  alignedsuperblockheap.h  ignoreinvalidfree.h  manageonesuperblock.h  tlab.h
src/include/util/: alignedmmap.h  array.h  atomicfreelist.h  bumpalloc.h  check.h  checkpoweroftwo.h  conformantheap.h  dynamichashtable.cpp  dynamichashtable.h  exactlyone.h  exactlyoneheap.h  fixedrequestheap.h  lockmallocheap.h  mmapalloc.h  releaseheap.h  threadpoolheap.h
src/source/: libhoard.cpp  mactls.cpp  unixtls.cpp  uselibhoard.cpp  wintls.cpp  winwrapper-detours.cpp
src/test/: Makefile  mtest.cpp  testoverflow.cpp
